sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var taille = getNombreValeurs() 
  var i = 0
  var deplacement1 = false
  var deplacement2 = false

  while(i != taille - 2)
  	{
      if (!plusPetit(i+1, i + 2) ){
    echange(i+1,i+2)
      if(!plusPetit(i,i+1)){
          echange(i,i+1)
        }
      if(i != 0){
        i = i - 1
      }
       if({
         i = i + 1
       }
    }
    	if(plusPetit(i+1, i + 2)&&plusPetit(i,i+1)){
        i = i + 1
      }
  
}
}